View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031596 | Open CASCADE | OCCT:Visualization | public | 2020-06-03 12:14 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031596: Visualization, OpenGl_Context - take GL_OES_texture_float extension into account for arbTexFloat flag | ||||
Description | GL_OES_texture_float extension allows using float RGBA textures in OpenGL ES 2.0 / WebGL 1.0 context without linear filtering, which might be useful in some algorithms. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31596 has been created by kgv. SHA-1: 799671ad145792fe3ff8e4bffa6cd8a79ca8a2be Detailed log of new commits: Author: kgv Date: Wed Jun 3 12:20:49 2020 +0300 0031596: Visualization, OpenGl_Context - take GL_OES_texture_float extension into account for arbTexFloat flag |
|
Patch is ready for review in OCCT branch CR31596. |
|
The patch was reviewed without remarks |
|
Branch CR31596 has been deleted by inv. SHA-1: 799671ad145792fe3ff8e4bffa6cd8a79ca8a2be |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-06-03 12:14 | kgv | New Issue | |
2020-06-03 12:14 | kgv | Assigned To | => kgv |
2020-06-03 12:19 | git | Note Added: 0092457 | |
2020-06-03 12:19 | kgv | Note Added: 0092458 | |
2020-06-03 12:19 | kgv | Assigned To | kgv => osa |
2020-06-03 12:19 | kgv | Status | new => resolved |
2020-06-03 13:37 | osa | Note Added: 0092461 | |
2020-06-03 13:37 | osa | Assigned To | osa => bugmaster |
2020-06-03 13:37 | osa | Status | resolved => reviewed |
2020-06-14 10:52 | bugmaster | Changeset attached | => occt master 59ec2cce |
2020-06-14 10:52 | bugmaster | Status | reviewed => verified |
2020-06-14 10:52 | bugmaster | Resolution | open => fixed |
2020-06-14 10:54 | bugmaster | Test case number | => Not required |
2020-06-20 13:42 | git | Note Added: 0092614 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |