0031596: Visualization, OpenGl_Context - take GL_OES_texture_float extension into account for arbTexFloat flag